Load all packages at top

--- a/5016-Lab_3_Hanyi_Wang.ipynb
+++ b/5016-Lab_3_Hanyi_Wang.ipynb
@@ -11,10 +11,23 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
-    "\n",
     "import statsmodels.api as sm\n",
     "import statsmodels.formula.api as smf\n",
-    "from scipy import stats"
+    "from scipy import stats\n",
+    "from statsmodels.compat import lzip\n",
+    "from statsmodels.stats.stattools import durbin_watson\n",
+    "from statsmodels.stats.diagnostic import acorr_breusch_godfrey\n",
+    "from statsmodels.tsa.stattools import acf\n",
+    "from statsmodels.graphics.tsaplots import plot_acf, plot_pacf\n",
+    "from patsy import dmatrices\n",
+    "from statsmodels.stats.outliers_influence import variance_inflation_factor\n",
+    "from arch.unitroot import ADF, PhillipsPerron, DFGLS\n",
+    "from arch import arch_model\n",
+    "from pmdarima.arima import auto_arima\n",
+    "import warnings\n",
+    "from statsmodels.tsa.arima_model import ARIMA\n",
+    "from statsmodels.tsa.statespace.sarimax import SARIMAX\n",
+    "from statsmodels.stats.diagnostic import acorr_ljungbox"
    ]
   },
   {
@@ -553,7 +566,6 @@
     }
    ],
    "source": [
-    "from statsmodels.compat import lzip\n",
     "name = ['BP', 'p-value', 'f-value', 'f p-value']\n",
     "\n",
     "test2 = sm.stats.diagnostic.het_breuschpagan(lm_gunlaw2.resid, lm_gunlaw2.model.exog)\n",
@@ -581,8 +593,6 @@
     }
    ],
    "source": [
-    "from statsmodels.tsa.stattools import acf\n",
-    "\n",
     "err2 = lm_gunlaw2.resid\n",
     "acf(err2)"
    ]
@@ -615,8 +625,6 @@
     }
    ],
    "source": [
-    "from statsmodels.graphics.tsaplots import plot_acf, plot_pacf\n",
-    "\n",
     "fig, ax = plt.subplots(2, 1, figsize=(8, 8))\n",
     "plot_acf(err2, lags = 8, zero = False, ax = ax[0]);\n",
     "plot_pacf(err2, lags = 8, zero = False, ax = ax[1]);\n",
@@ -640,9 +648,6 @@
     }
    ],
    "source": [
-    "from statsmodels.stats.stattools import durbin_watson\n",
-    "from statsmodels.stats.diagnostic import acorr_breusch_godfrey\n",
-    "\n",
     "print('Durbin Watson statistic:', durbin_watson(err2))\n",
     "\n",
     "lmtest2, pval2, fval2, f_pval2 = acorr_breusch_godfrey(lm_gunlaw2, nlags = 1)\n",
@@ -856,9 +861,6 @@
     }
    ],
    "source": [
-    "from patsy import dmatrices\n",
-    "from statsmodels.stats.outliers_influence import variance_inflation_factor\n",
-    "\n",
     "y, X = dmatrices('gunlaw_pct ~ age + ba_pct + hapmar_pct + year',\n",
     "                 data = by_year_ts, return_type = 'dataframe')\n",
     "\n",
@@ -1064,9 +1066,6 @@
     }
    ],
    "source": [
-    "from arch.unitroot import ADF, PhillipsPerron, DFGLS\n",
-    "from arch import arch_model\n",
-    "\n",
     "ADF(by_year_ts['gunlaw_pct'], lags = int(4*(len(by_year_ts)/100)**(2/9)), trend = 'c')"
    ]
   },
@@ -1216,8 +1215,6 @@
     }
    ],
    "source": [
-    "from pmdarima.arima import auto_arima\n",
-    "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "auto_arima(err2, trace = True, test = 'kpss', information_criterion = 'bic')"
@@ -1297,9 +1294,6 @@
     }
    ],
    "source": [
-    "from statsmodels.tsa.arima_model import ARIMA\n",
-    "from statsmodels.tsa.statespace.sarimax import SARIMAX\n",
-    "\n",
     "by_year_ts['intercept'] = 1\n",
     "arima_gunlaw = SARIMAX(endog = by_year_ts['gunlaw_pct'], order = (0, 0, 1), \n",
     "                      exog = by_year_ts[['ba_pct', 'year', 'intercept']]).fit(trend = 'nc')"
@@ -1606,8 +1600,6 @@
     }
    ],
    "source": [
-    "from statsmodels.stats.diagnostic import acorr_ljungbox\n",
-    "\n",
     "acorr_ljungbox(arima_gunlaw.resid, boxpierce = True, lags = round((len(by_year_ts)/2-2), 0))"
    ]
   },
