Relabel variable with content description

--- a/5016-Lab_3_Hanyi_Wang.ipynb
+++ b/5016-Lab_3_Hanyi_Wang.ipynb
@@ -5,7 +5,19 @@
    "execution_count": 1,
    "id": "7890c43e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'arch'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/cw/pcxt012s3td1d_ls_vc4g03h0000gn/T/ipykernel_22761/3614768268.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mpatsy\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mdmatrices\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mstatsmodels\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstats\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moutliers_influence\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mvariance_inflation_factor\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0march\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munitroot\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mADF\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mPhillipsPerron\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mDFGLS\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0march\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0march_model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mpmdarima\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marima\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mauto_arima\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'arch'"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -40,13 +52,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "798bebac",
    "metadata": {},
    "outputs": [],
    "source": [
     "gss = pd.read_csv(\"trends-gss.csv\")\n",
-    "variables = [\"year\", \"gunlaw\", \"sex\", \"age\", \"race\", \"childs\", \"hapmar\", \"degree\", \"realinc\"]\n",
+    "variables = [\"year\", \"progunlaw\", \"gender\", \"age\", \"race\", \"childs\", \"hapmar\", \"degree\", \"realinc\"]\n",
     "sub = gss[variables].copy()"
    ]
   },
@@ -57,7 +69,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sub['ngunlaw'] = np.where(sub['gunlaw'] == 1, 1, 0)\n",
+    "sub['nprogunlaw'] = np.where(sub['progunlaw'] == 1, 1, 0)\n",
     "sub['baplus'] = np.where(sub['degree'] >= 3, 1, 0)\n",
     "sub['happinessmar'] = np.where(sub['hapmar'] == 1, 1, 0)\n",
     "sub['income'] = sub['realinc']"
@@ -105,7 +117,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "by_year_ts['gunlaw_pct'] = by_year_ts['gunlaw']*100\n",
+    "by_year_ts['progunlaw_pct'] = by_year_ts['progunlaw']*100\n",
     "by_year_ts['ba_pct'] = by_year_ts['baplus']*100\n",
     "by_year_ts['hapmar_pct'] = by_year_ts['happinessmar']*100"
    ]
@@ -228,7 +240,7 @@
     }
    ],
    "source": [
-    "corr_vars = ['gunlaw_pct', 'hapmar_pct', 'ba_pct', 'age', 'income', 'year']\n",
+    "corr_vars = ['progunlaw_pct', 'hapmar_pct', 'ba_pct', 'age', 'income', 'year']\n",
     "by_year_ts[corr_vars].corr()"
    ]
   },
@@ -287,7 +299,7 @@
    "source": [
     "fig, axes = plt.subplots(nrows = 2, ncols = 2, figsize = (10,10))\n",
     "\n",
-    "by_year_ts['gunlaw_pct'].plot(title = 'Support gun purchase restrictions', color = 'g', ax = axes[0,0], grid = True)\n",
+    "by_year_ts['progunlaw_pct'].plot(title = 'Support gun purchase restrictions', color = 'g', ax = axes[0,0], grid = True)\n",
     "by_year_ts['ba_pct'].plot(title = 'Percent with BA Degrees', color = 'purple', ax = axes[0,1], grid = True)\n",
     "by_year_ts['hapmar_pct'].plot(title = 'Percent happy in marrige', color = 'orange', ax = axes[1,0], grid = True)\n",
     "by_year_ts['income'].plot(title = 'Income', color = 'b', ax = axes[1,1], grid = True)\n",
@@ -405,8 +417,8 @@
     }
    ],
    "source": [
-    "lm_gunlaw = smf.ols('gunlaw_pct ~ ba_pct', data = by_year_ts).fit()\n",
-    "lm_gunlaw.summary()"
+    "lm_progunlaw = smf.ols('progunlaw_pct ~ ba_pct', data = by_year_ts).fit()\n",
+    "lm_progunlaw.summary()"
    ]
   },
   {
@@ -533,8 +545,8 @@
     }
    ],
    "source": [
-    "lm_gunlaw2 = smf.ols('gunlaw_pct ~ ba_pct + year', data = by_year_ts).fit()\n",
-    "lm_gunlaw2.summary()"
+    "lm_progunlaw2 = smf.ols('progunlaw_pct ~ ba_pct + year', data = by_year_ts).fit()\n",
+    "lm_progunlaw2.summary()"
    ]
   },
   {
@@ -568,7 +580,7 @@
    "source": [
     "name = ['BP', 'p-value', 'f-value', 'f p-value']\n",
     "\n",
-    "test2 = sm.stats.diagnostic.het_breuschpagan(lm_gunlaw2.resid, lm_gunlaw2.model.exog)\n",
+    "test2 = sm.stats.diagnostic.het_breuschpagan(lm_progunlaw2.resid, lm_progunlaw2.model.exog)\n",
     "lzip(name, test2)"
    ]
   },
@@ -593,7 +605,7 @@
     }
    ],
    "source": [
-    "err2 = lm_gunlaw2.resid\n",
+    "err2 = lm_progunlaw2.resid\n",
     "acf(err2)"
    ]
   },
@@ -650,7 +662,7 @@
    "source": [
     "print('Durbin Watson statistic:', durbin_watson(err2))\n",
     "\n",
-    "lmtest2, pval2, fval2, f_pval2 = acorr_breusch_godfrey(lm_gunlaw2, nlags = 1)\n",
+    "lmtest2, pval2, fval2, f_pval2 = acorr_breusch_godfrey(lm_progunlaw2, nlags = 1)\n",
     "print('LM test =', lmtest2)\n",
     "print('p-value =', pval2)"
    ]
@@ -779,8 +791,8 @@
     }
    ],
    "source": [
-    "lm_gunlaw3 = smf.ols('gunlaw_pct ~ age + ba_pct + hapmar_pct + year', data = by_year_ts).fit()\n",
-    "lm_gunlaw3.summary()"
+    "lm_progunlaw3 = smf.ols('progunlaw_pct ~ age + ba_pct + hapmar_pct + year', data = by_year_ts).fit()\n",
+    "lm_progunlaw3.summary()"
    ]
   },
   {
@@ -861,7 +873,7 @@
     }
    ],
    "source": [
-    "y, X = dmatrices('gunlaw_pct ~ age + ba_pct + hapmar_pct + year',\n",
+    "y, X = dmatrices('progunlaw_pct ~ age + ba_pct + hapmar_pct + year',\n",
     "                 data = by_year_ts, return_type = 'dataframe')\n",
     "\n",
     "vif = pd.DataFrame()\n",
@@ -887,7 +899,7 @@
    "source": [
     "by_yearFD = pd.DataFrame()\n",
     "\n",
-    "by_yearFD = by_year_ts[['gunlaw_pct', 'age', 'ba_pct', 'hapmar_pct']]\n",
+    "by_yearFD = by_year_ts[['progunlaw_pct', 'age', 'ba_pct', 'hapmar_pct']]\n",
     "by_yearFD = by_yearFD.diff()\n",
     "\n",
     "by_yearFD['year'] = by_year_ts['year']"
@@ -1001,8 +1013,8 @@
     }
    ],
    "source": [
-    "lm_gunlaw4 = smf.ols('gunlaw_pct ~ ba_pct + year', data = by_yearFD).fit()\n",
-    "lm_gunlaw4.summary()"
+    "lm_progunlaw4 = smf.ols('progunlaw_pct ~ ba_pct + year', data = by_yearFD).fit()\n",
+    "lm_progunlaw4.summary()"
    ]
   },
   {
@@ -1066,7 +1078,7 @@
     }
    ],
    "source": [
-    "ADF(by_year_ts['gunlaw_pct'], lags = int(4*(len(by_year_ts)/100)**(2/9)), trend = 'c')"
+    "ADF(by_year_ts['progunlaw_pct'], lags = int(4*(len(by_year_ts)/100)**(2/9)), trend = 'c')"
    ]
   },
   {
@@ -1114,7 +1126,7 @@
     }
    ],
    "source": [
-    "DFGLS(by_year_ts['gunlaw_pct'], lags = int(4*(len(by_year_ts)/100)**(2/9)), trend = 'c')"
+    "DFGLS(by_year_ts['progunlaw_pct'], lags = int(4*(len(by_year_ts)/100)**(2/9)), trend = 'c')"
    ]
   },
   {
@@ -1162,7 +1174,7 @@
     }
    ],
    "source": [
-    "PhillipsPerron(by_year_ts['gunlaw_pct'], lags = 3)"
+    "PhillipsPerron(by_year_ts['progunlaw_pct'], lags = 3)"
    ]
   },
   {
@@ -1295,7 +1307,7 @@
    ],
    "source": [
     "by_year_ts['intercept'] = 1\n",
-    "arima_gunlaw = SARIMAX(endog = by_year_ts['gunlaw_pct'], order = (0, 0, 1), \n",
+    "arima_progunlaw = SARIMAX(endog = by_year_ts['progunlaw_pct'], order = (0, 0, 1), \n",
     "                      exog = by_year_ts[['ba_pct', 'year', 'intercept']]).fit(trend = 'nc')"
    ]
   },
@@ -1405,7 +1417,7 @@
     }
    ],
    "source": [
-    "arima_gunlaw.summary()"
+    "arima_progunlaw.summary()"
    ]
   },
   {
@@ -1600,7 +1612,7 @@
     }
    ],
    "source": [
-    "acorr_ljungbox(arima_gunlaw.resid, boxpierce = True, lags = round((len(by_year_ts)/2-2), 0))"
+    "acorr_ljungbox(arima_progunlaw.resid, boxpierce = True, lags = round((len(by_year_ts)/2-2), 0))"
    ]
   },
   {
