Delete variables subsetted but unused

--- a/5016-Lab_3_Hanyi_Wang.ipynb
+++ b/5016-Lab_3_Hanyi_Wang.ipynb
@@ -58,7 +58,7 @@
    "outputs": [],
    "source": [
     "gss = pd.read_csv(\"trends-gss.csv\")\n",
-    "variables = [\"year\", \"progunlaw\", \"gender\", \"age\", \"race\", \"childs\", \"hapmar\", \"degree\", \"realinc\"]\n",
+    "variables = [\"year\", \"progunlaw\", \"age\", \"hapmar\", \"degree\", \"realinc\"]\n",
     "sub = gss[variables].copy()"
    ]
   },
