Add commments to question 1

--- a/5016-Lab_3_Hanyi_Wang.ipynb
+++ b/5016-Lab_3_Hanyi_Wang.ipynb
@@ -19,6 +19,8 @@
     }
    ],
    "source": [
+    "# import packages\n",
+    "\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -57,6 +59,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# import data and create variables\n",
+    "\n",
     "gss = pd.read_csv(\"trends-gss.csv\")\n",
     "variables = [\"year\", \"progunlaw\", \"age\", \"hapmar\", \"degree\", \"realinc\"]\n",
     "sub = gss[variables].copy()"
@@ -69,6 +73,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# recode variables\n",
+    "\n",
     "sub['nprogunlaw'] = np.where(sub['progunlaw'] == 1, 1, 0)\n",
     "sub['baplus'] = np.where(sub['degree'] >= 3, 1, 0)\n",
     "sub['happinessmar'] = np.where(sub['hapmar'] == 1, 1, 0)\n",
@@ -82,6 +88,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# group variables by year\n",
+    "\n",
     "by_year = sub.groupby('year', as_index = False).agg('mean').replace({0.000000: np.nan})"
    ]
   },
@@ -92,6 +100,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# add years to dataframe\n",
+    "\n",
     "add_years_df = pd.DataFrame(data = pd.Series([1979, 1981, 1992, 1995] + list(np.arange(1997, 2009, 2))),\n",
     "                            columns = ['year'])\n",
     "                            \n",
@@ -105,6 +115,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# sort by year and make index\n",
+    "\n",
     "by_year = by_year.sort_values('year')\n",
     "by_year = by_year.set_index(\"year\", drop = False)\n",
     "by_year_ts = by_year.interpolate(method = 'linear')"
@@ -117,6 +129,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# multiply percentages by 100\n",
+    "\n",
     "by_year_ts['progunlaw_pct'] = by_year_ts['progunlaw']*100\n",
     "by_year_ts['ba_pct'] = by_year_ts['baplus']*100\n",
     "by_year_ts['hapmar_pct'] = by_year_ts['happinessmar']*100"
