Add comments question 3

--- a/5016-Lab_3_Hanyi_Wang.ipynb
+++ b/5016-Lab_3_Hanyi_Wang.ipynb
@@ -446,6 +446,8 @@
     }
    ],
    "source": [
+    "# run time series regression\n",
+    "\n",
     "lm_progunlaw = smf.ols('progunlaw_pct ~ ba_pct', data = by_year_ts).fit()\n",
     "lm_progunlaw.summary()"
    ]
