Add comments question 4

--- a/5016-Lab_3_Hanyi_Wang.ipynb
+++ b/5016-Lab_3_Hanyi_Wang.ipynb
@@ -576,6 +576,8 @@
     }
    ],
    "source": [
+    "# run time series regression \n",
+    "\n",
     "lm_progunlaw2 = smf.ols('progunlaw_pct ~ ba_pct + year', data = by_year_ts).fit()\n",
     "lm_progunlaw2.summary()"
    ]
@@ -609,6 +611,8 @@
     }
    ],
    "source": [
+    "# find BP, p-value, f-value, and f p-value\n",
+    "\n",
     "name = ['BP', 'p-value', 'f-value', 'f p-value']\n",
     "\n",
     "test2 = sm.stats.diagnostic.het_breuschpagan(lm_progunlaw2.resid, lm_progunlaw2.model.exog)\n",
@@ -636,6 +640,8 @@
     }
    ],
    "source": [
+    "# find error terms\n",
+    "\n",
     "err2 = lm_progunlaw2.resid\n",
     "acf(err2)"
    ]
@@ -668,6 +674,8 @@
     }
    ],
    "source": [
+    "# plot autocorrelation data and partial autocorrelation data\n",
+    "\n",
     "fig, ax = plt.subplots(2, 1, figsize=(8, 8))\n",
     "plot_acf(err2, lags = 8, zero = False, ax = ax[0]);\n",
     "plot_pacf(err2, lags = 8, zero = False, ax = ax[1]);\n",
@@ -691,6 +699,8 @@
     }
    ],
    "source": [
+    "# find Durbin Watson statistic, calculate LM test, and find p-value\n",
+    "\n",
     "print('Durbin Watson statistic:', durbin_watson(err2))\n",
     "\n",
     "lmtest2, pval2, fval2, f_pval2 = acorr_breusch_godfrey(lm_progunlaw2, nlags = 1)\n",
